WIP change HTML to include already resized images

--- a/app/views/proprietor/_bl_partners_home.html.erb
+++ b/app/views/proprietor/_bl_partners_home.html.erb
@@ -17,18 +17,18 @@
 
 <section class="shared-layer-logos-container ie-table">
   <div class="grid-item ie-table-item">
-    <a href="https://mola.oar.bl.uk" target="_blank"><span class="partner-logo mola-logo"></span></a>
+    <a href="https://mola.oar.bl.uk" target="_blank"><img src="mola-logo-120px.jpg"></a>
   </div>
   <div class="grid-item ie-table-item">
-    <a href="https://tate.oar.bl.uk" target="_blank"><span class="partner-logo tate-logo"></span></a>
+    <a href="https://tate.oar.bl.uk" target="_blank"><img src="tate-logo-120px-width.png"></a>
   </div>
   <div class="grid-item ie-table-item">
-    <a href="https://nms.oar.bl.uk" target="_blank"><span class="partner-logo nms-logo"></span></a>
+    <a href="https://nms.oar.bl.uk" target="_blank"><img src="nms-logo-120px-width.jpg"></a>
   </div>
   <div class="grid-item ie-table-item">
-    <a href="https://britishmuseum.oar.bl.uk" target="_blank"><span class="partner-logo bm-logo"></span></a>
+    <a href="https://britishmuseum.oar.bl.uk" target="_blank"><img src="bm-logo-120px-width.png"></a>
   </div>
   <div class="grid-item ie-table-item">
-    <a href="https://bl.oar.bl.uk" target="_blank"><span class="partner-logo bl-logo"></span></a>
+    <a href="https://bl.oar.bl.uk" target="_blank"><img src="bl-logo-120px-height.jpg"></a>
   </div>
 </section>
