--- a/app/views/shared/ubiquity/collections/_show_document_list_row.html.erb
+++ b/app/views/shared/ubiquity/collections/_show_document_list_row.html.erb
@@ -16,7 +16,7 @@
   <td>
     <div class="media">
       <% if  document.thumbnail_id %>
-        <%= render 'shared/ubiquity/thumbnail', document: document,  presenter: Hyrax::WorkShowPresenter.new(document, current_ability) %>
+        <%= render 'shared/ubiquity/thumbnail', document: document,  presenter: Hyku::ManifestEnabledWorkShowPresenter.new(document, current_ability) %>
       <% else %>
         <%= link_to "", class: 'media-left', 'aria-hidden' => true do %>
           <span class="media-left hidden-xs file_listing_thumbnail" style="height:55px;width:50px;padding-left: 60px;" ></span>
