--- a/app/views/hyrax/my/works/_list_works.html.erb
+++ b/app/views/hyrax/my/works/_list_works.html.erb
@@ -7,7 +7,7 @@
   <td>
     <div class='media'>
 
-      <%= render 'shared/ubiquity/thumbnail', document: document, presenter: presenter %>
+      <%= render 'shared/ubiquity/thumbnail', document: document, presenter:  Hyku::ManifestEnabledWorkShowPresenter.new(document, current_ability) %>
 
       <div class='media-body'>
         <div class='media-heading'>
